[gd_scene load_steps=11 format=3 uid="uid://bhw1mbgjp7dby"]

[ext_resource type="Script" uid="uid://dyjok55lmblxb" path="res://pages/title/title.gd" id="1_d2gdb"]
[ext_resource type="FontFile" uid="uid://bl2oollbyb0rj" path="res://fonts/gwibble/gwibble.ttf" id="2_a4giu"]
[ext_resource type="PackedScene" uid="uid://5j8rklfmops0" path="res://pages/title/parallax_bg/parallax_bg.tscn" id="3_033iv"]
[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="3_k3j40"]
[ext_resource type="Texture2D" uid="uid://bteadegxvoxj1" path="res://pages/title/title_text_fill.png" id="5_giwdd"]
[ext_resource type="Texture2D" uid="uid://cof8kdg033oa4" path="res://pages/title/parallax_bg/hay_5.png" id="5_r1m53"]

[sub_resource type="Theme" id="Theme_jjqe5"]
default_font = ExtResource("2_a4giu")
default_font_size = 128

[sub_resource type="Animation" id="Animation_e1rso"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title0/Title-text-fill/Hay-5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(900, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title0/Title-text-fill/Hay-5-duplicate:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4996, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title0/Title-text-fill/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1295.03, -422.36)]
}

[sub_resource type="Animation" id="Animation_ht0b2"]
resource_name = "scroll"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title0/Title-text-fill/Hay-5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(900, 200), Vector2(-3196, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title0/Title-text-fill/Hay-5-duplicate:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4996, 200), Vector2(900, 200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title0/Title-text-fill/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.66, 4.9999, 5, 5.66, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1295.03, -422.36), Vector2(-1200, -422.36), Vector2(-1200, -422.36), Vector2(1295.03, -422.36), Vector2(-1200, -422.36), Vector2(-1200, -422.36)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h14ik"]
_data = {
&"RESET": SubResource("Animation_e1rso"),
&"scroll": SubResource("Animation_ht0b2")
}

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_k3j40")
script = ExtResource("1_d2gdb")

[node name="ParallaxBg" parent="." instance=ExtResource("3_033iv")]
position = Vector2(2048, 0)

[node name="Title1" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -738.0
offset_top = -447.5
offset_right = 738.0
offset_bottom = -272.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jjqe5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 164
text = "Platform Racing"
horizontal_alignment = 1

[node name="Title2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -285.0
offset_right = 250.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jjqe5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 164
text = "-- 4 --"
horizontal_alignment = 1

[node name="Title0" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -445.0
offset_right = 720.0
offset_bottom = -275.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jjqe5")
theme_override_colors/font_color = Color(0.0441237, 0.0675784, 0.105968, 1)
theme_override_colors/font_shadow_color = Color(0.815686, 0.796078, 0.603922, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 140
horizontal_alignment = 1

[node name="Title-text-fill" type="Sprite2D" parent="Title0"]
clip_children = 1
position = Vector2(721, 156)
scale = Vector2(0.644, 0.644)
texture = ExtResource("5_giwdd")

[node name="Hay-5" type="Sprite2D" parent="Title0/Title-text-fill"]
position = Vector2(900, 100)
texture = ExtResource("5_r1m53")

[node name="Hay-5-duplicate" type="Sprite2D" parent="Title0/Title-text-fill"]
position = Vector2(4996, 100)
texture = ExtResource("5_r1m53")

[node name="ColorRect" type="ColorRect" parent="Title0/Title-text-fill"]
modulate = Color(1, 1, 1, 0.533333)
offset_left = 1295.03
offset_top = -422.36
offset_right = 1414.03
offset_bottom = 203.64001
rotation = 0.305433

[node name="Title-text-fill2" type="Sprite2D" parent="Title0"]
modulate = Color(1, 1, 1, 0.466667)
position = Vector2(721, 156)
scale = Vector2(0.644, 0.644)
texture = ExtResource("5_giwdd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="LogoutButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Logout"

[node name="UserSettingsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Settings"

[node name="AwaitingLoginPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 822.0
offset_top = 518.0
offset_right = 1122.0
offset_bottom = 598.0

[node name="VBoxContainer" type="VBoxContainer" parent="AwaitingLoginPanel"]
layout_mode = 0
offset_top = 25.0
offset_right = 300.0
offset_bottom = 55.0

[node name="Label" type="Label" parent="AwaitingLoginPanel/VBoxContainer"]
layout_mode = 2
text = "Checking your login..."
horizontal_alignment = 1

[node name="NotLoggedInPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 797.0
offset_top = 518.0
offset_right = 1147.0
offset_bottom = 818.0

[node name="VBoxContainer" type="VBoxContainer" parent="NotLoggedInPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 27.0
offset_right = 325.0
offset_bottom = 277.0
alignment = 1

[node name="LoginButton" type="Button" parent="NotLoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Login"

[node name="GuestPlayButton" type="Button" parent="NotLoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Play as a Guest"

[node name="CreateAccountButton" type="Button" parent="NotLoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Create Account"

[node name="LevelEditorButton" type="Button" parent="NotLoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Goto Level Editor"

[node name="CreditsButton" type="Button" parent="NotLoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Credits"

[node name="LoggedInPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 797.0
offset_top = 518.0
offset_right = 1147.0
offset_bottom = 818.0

[node name="VBoxContainer" type="VBoxContainer" parent="LoggedInPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 27.0
offset_right = 325.0
offset_bottom = 277.0
alignment = 1

[node name="NicknameLabel" type="Label" parent="LoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Welcome, Nickname!"
horizontal_alignment = 1

[node name="LobbyButton" type="Button" parent="LoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Go To Lobby"

[node name="LevelEditorButton" type="Button" parent="LoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Goto Level Editor"

[node name="CreditsButton" type="Button" parent="LoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Credits"

[node name="UserSettingsButton" type="Button" parent="LoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Account Settings"

[node name="LogoutButton" type="Button" parent="LoggedInPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3j40")
text = "Logout"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h14ik")
}
autoplay = "scroll"
